adding a new string for Later

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">موافق</string>
     <string name="cancel">إلغاء</string>
+    <string name="later">Later</string>
     <string name="save_as">حفظ كـ</string>
     <string name="file_saved">تم حفظ الملف بنجاح</string>
     <string name="invalid_file_format">تنسيق الملف غير صالح</string>
