--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">Oldu</string>
     <string name="cancel">Ləğv Et</string>
+    <string name="later">Later</string>
     <string name="save_as">Saxla</string>
     <string name="file_saved">Fayl uğurla saxlandı</string>
     <string name="invalid_file_format">Keçərsiz fayl formatı</string>
