--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Zrušit</string>
+    <string name="later">Later</string>
     <string name="save_as">Uložit jako</string>
     <string name="file_saved">Soubor úspěšně uložen</string>
     <string name="invalid_file_format">Neplatný formát souboru</string>
