--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">Iawn</string>
     <string name="cancel">Diddymu</string>
+    <string name="later">Later</string>
     <string name="save_as">Cadw fel</string>
     <string name="file_saved">Cadwyd y ffeil yn llwyddiannus</string>
     <string name="invalid_file_format">Fformat ffeil annilys</string>
