--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">Ados</string>
     <string name="cancel">Utzi</string>
+    <string name="later">Later</string>
     <string name="save_as">Gorde honela...</string>
     <string name="file_saved">Fitxategia ondo gorde da</string>
     <string name="invalid_file_format">Fitxategi-formatu baliogabea</string>
