--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">Aceptar</string>
     <string name="cancel">Cancelar</string>
+    <string name="later">Later</string>
     <string name="save_as">Gardar como</string>
     <string name="file_saved">Ficheiro gardado con éxito</string>
     <string name="invalid_file_format">Formato de ficheiro non válido</string>
