--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">U redu</string>
     <string name="cancel">Poništi</string>
+    <string name="later">Later</string>
     <string name="save_as">Spremi kao</string>
     <string name="file_saved">Datoteka uspješno spremljena</string>
     <string name="invalid_file_format">Nevažeći format datoteke</string>
