--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Mégsem</string>
+    <string name="later">Later</string>
     <string name="save_as">Mentés másként</string>
     <string name="file_saved">Sikeres fájl mentés</string>
     <string name="invalid_file_format">Érvénytelen fájl formátum</string>
