--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Annulla</string>
+    <string name="later">Later</string>
     <string name="save_as">Salva come</string>
     <string name="file_saved">File salvato correttamente</string>
     <string name="invalid_file_format">Formato del file non valido</string>
