--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">אישור</string>
     <string name="cancel">ביטול</string>
+    <string name="later">Later</string>
     <string name="save_as">שמירה בשם</string>
     <string name="file_saved">קובץ נשמר</string>
     <string name="invalid_file_format">פורמט קובץ שגוי</string>
