--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">Gerai</string>
     <string name="cancel">Atšaukti</string>
+    <string name="later">Later</string>
     <string name="save_as">Išsaugoti kaip</string>
     <string name="file_saved">Byla išsaugota sėkmingai</string>
     <string name="invalid_file_format">Neteisingas bylos formatas</string>
