--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Anuluj</string>
+    <string name="later">Later</string>
     <string name="save_as">Zapisz jako</string>
     <string name="file_saved">Plik został zapisany</string>
     <string name="invalid_file_format">Nieprawidłowy format pliku</string>
