--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Отмена</string>
+    <string name="later">Later</string>
     <string name="save_as">Сохранить как</string>
     <string name="file_saved">Файл сохранён</string>
     <string name="invalid_file_format">Неправильный формат файла</string>
