--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Prekliči</string>
+    <string name="later">Later</string>
     <string name="save_as">Shrani kot</string>
     <string name="file_saved">Datoteka shranjena uspešno</string>
     <string name="invalid_file_format">Neveljaven format datoteke</string>
