--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">Одобри</string>
     <string name="cancel">Поништи</string>
+    <string name="later">Later</string>
     <string name="save_as">Сачувај као</string>
     <string name="file_saved">Датотека успешно сачувана</string>
     <string name="invalid_file_format">Нетачан формат датотеке</string>
