--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Avbryt</string>
+    <string name="later">Later</string>
     <string name="save_as">Spara som</string>
     <string name="file_saved">Filen har sparats</string>
     <string name="invalid_file_format">Ogiltigt filformat</string>
