--- a/commons/src/main/res/values-ta/strings.xml
+++ b/commons/src/main/res/values-ta/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">சரி</string>
     <string name="cancel">ரத்துசெய்</string>
+    <string name="later">Later</string>
     <string name="save_as">என சேமிக்கவும்</string>
     <string name="file_saved">கோப்பு வெற்றிகரமாக சேமிக்கப்பட்டது</string>
     <string name="invalid_file_format">தவறான கோப்பு வடிவம்</string>
