--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Hủy bỏ</string>
+    <string name="later">Later</string>
     <string name="save_as">Lưu thành</string>
     <string name="file_saved">Tệp đã được lưu thành công</string>
     <string name="invalid_file_format">Định dạng tập tin không hợp lệ</string>
