--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">確定</string>
     <string name="cancel">取消</string>
+    <string name="later">Later</string>
     <string name="save_as">儲存</string>
     <string name="file_saved">成功儲存檔案</string>
     <string name="invalid_file_format">無效的檔案格式</string>
