--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">ठीक</string>
     <string name="cancel">रद्द करें</string>
+    <string name="later">Later</string>
     <string name="save_as">Save as</string>
     <string name="file_saved">File saved successfully</string>
     <string name="invalid_file_format">Invalid file format</string>
