--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="ok">OKE</string>
     <string name="cancel">Batal</string>
+    <string name="later">Later</string>
     <string name="save_as">Simpan sebagai</string>
     <string name="file_saved">Berkas berhasil disimpan</string>
     <string name="invalid_file_format">Format berkas tidak valid</string>
