--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -822,6 +822,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Selvvalgt baggrundsfarve</string>
     <string name="why_upgrade_file_importing">Understøtter filimport</string>
+    <string name="why_upgrade_zooming">Zooming</string>
 
     <!-- License -->
     <string name="notice">Denne app bruger følgende 3.-parts biblioteker der gør at mit liv bliver lidt enklere. Tak.</string>
