--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -790,6 +790,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Kustomisasi warna latar belakang</string>
     <string name="why_upgrade_file_importing">Mendukung pengimporan file</string>
+    <string name="why_upgrade_zooming">Zooming</string>
 
     <!-- License -->
     <string name="notice">Aplikasi ini menggunakan pustaka pihak ketiga berikut untuk mempermudah pekerjaan. Terima kasih.</string>
