--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -789,6 +789,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">바탕화면 설정 가능</string>
     <string name="why_upgrade_file_importing">파일 가져오기 지원</string>
+    <string name="why_upgrade_zooming">Zooming</string>
 
     <!-- License -->
     <string name="notice">이 앱은 삶을 간편하게 만들어주는 다음의 서드파티 라이브버리를 사용합니다. 감사합니다.</string>
