--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -857,6 +857,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Meniteľná farba pozadia</string>
     <string name="why_upgrade_file_importing">Podpora importovania súborov</string>
+    <string name="why_upgrade_zooming">Zoomovanie</string>
 
     <!-- License -->
     <string name="notice">Táto aplikácia používa na uľahčenie práce nasledovné knižnice tretích strán. Ďakujeme.</string>
