--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -820,6 +820,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Taustavärin kustomointi</string>
     <string name="why_upgrade_file_importing">Tuki tiedostojen tuonnille</string>
+    <string name="why_upgrade_zooming">Zooming</string>
 
     <!-- License -->
     <string name="notice">Tämä sovellus käyttää kolmannen osapuolen lisenssejä tehdäkseni elämästäni helpompaa. Kiitos.</string>
