--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -786,6 +786,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">背景色のカスタマイズ</string>
     <string name="why_upgrade_file_importing">ファイル入力対応</string>
+    <string name="why_upgrade_zooming">Zooming</string>
 
     <!-- License -->
     <string name="notice">このアプリは、私の暮らしにゆとりを持たせるために、次のサードパーティのライブラリーを使用しています。ありがとうございます。</string>
