--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -823,7 +823,7 @@
     <!-- Draw Pro -->
     <string name="why_upgrade_background_color_customization">Προσαρμογή χρώματος φόντου</string>
     <string name="why_upgrade_file_importing">Υποστήριξη εισαγωγής αρχείων</string>
-    <string name="why_upgrade_zooming">Zooming</string>
+    <string name="why_upgrade_zooming">Μεγέθυνση</string>
 
     <!-- License -->
     <string name="notice">Αυτή η εφαρμογή χρησιμοποιεί τις ακόλουθες βιβλιοθήκες τρίτων για να διευκολύνει τη ζωή μου. Ευχαριστώ.</string>
