--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Ακύρωση</string>
-    <string name="later">Later</string>
+    <string name="later">Αργότερα</string>
     <string name="save_as">Αποθήκευση ως</string>
     <string name="file_saved">Αποθηκεύθηκε επιτυχώς</string>
     <string name="invalid_file_format">Μη έγκυρη μορφή αρχείου</string>
