updating a string in a couple languages

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -1,7 +1,7 @@
 ﻿<resources>
     <string name="ok">OK</string>
     <string name="cancel">Abbrechen</string>
-    <string name="later">Later</string>
+    <string name="later">Später</string>
     <string name="save_as">Speichern unter</string>
     <string name="file_saved">Datei erfolgreich gespeichert</string>
     <string name="invalid_file_format">Ungültiges Dateiformat</string>
