--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Annuler</string>
-    <string name="later">Later</string>
+    <string name="later">Plus tard</string>
     <string name="save_as">Enregistrer sous</string>
     <string name="file_saved">Fichier enregistré</string>
     <string name="invalid_file_format">Format de fichier incorrect</string>
