--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="ok">OK</string>
     <string name="cancel">Peruuta</string>
-    <string name="later">Later</string>
+    <string name="later">Myöhemmin</string>
     <string name="save_as">Tallenna nimellä</string>
     <string name="file_saved">Tallennettu</string>
     <string name="invalid_file_format">Virheellinen tiedostomuoto</string>
