translating one more string

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -788,7 +788,7 @@
     <string name="why_upgrade_no_ads">Sin anuncios</string>
     <string name="why_upgrade_no_internet_access">Sin acceso a Internet</string>
     <string name="why_upgrade_footer">+ 100% de Garantía de Devolución de Dinero</string>
-    <string name="why_upgrade_improved_design">Improved design</string>
+    <string name="why_upgrade_improved_design">Diseño mejorado</string>
 
     <!-- Gallery Pro -->
     <string name="why_upgrade_advanced_photo_editor">Editor de fotos avanzado</string>
